# Space-Invader-Abgabe

./: .gitignore  Makefile  README.md  game  tests
src/: CMakeLists.txt
src/control/: AlienControl.cpp  AlienControl.hpp  Game.cpp  Game.hpp  OverlayControl.cpp  OverlayControl.hpp  PowerupControl.cpp  PowerupControl.hpp  SpaceshipControl.cpp  SpaceshipControl.hpp
src/model/: Aliens.cpp  Aliens.hpp  Constants.hpp  Direction.hpp  GameState.hpp  Powerup.cpp  Powerup.hpp  Shoot.cpp  Shoot.hpp  Spaceship.cpp  Spaceship.hpp
src/view/: ILayer.hpp  Layer.hpp  MockLayer.hpp
test/: AlienControlTest.cpp  AliensTest.cpp  CMakeLists.txt  GameTest.cpp  OverlayControlTest.cpp  PowerupControlTest.cpp  ShootTest.cpp  SpaceshipControlTest.cpp  SpaceshipTest.cpp
